using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace FillGaps.StockTrack.ConsoleApp.Domain.ValueObjects
{
    public enum TipoMovimentacao
    {
        Entrada,
        Saida
    }
}
